// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.logging.uiusage.api;

import "src/com/google/android/as/oss/logging/uiusage/api/log_usage_data.proto";

option java_package = "com.google.android.as.oss.logging.uiusage.api";
option java_multiple_files = true;

// Service to log usage data for impressions/user interactions with the remote
// UI.
service UsageDataService {
  // Log the usage data.
  rpc LogUsageData(LogUsageDataRequest) returns (LogUsageDataResponse) {
    option deadline = 5.0;
  }
}
